--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
     <title>LP de patins animada</title>
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="./assets/logo.svg" alt="img">
+        </div>
+        <div class="cart">
+            <img src="./assets/shopping-bag-01.svg" alt="img">
+            <span>1</span>
+        </div>
+    </header>
 </body>
 </html>
