--- a/index.html
+++ b/index.html
@@ -22,5 +22,29 @@
             <span>1</span>
         </div>
     </header>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Snitap, sua vida mais 
+                <div>
+                    <span>Radical</span>
+                    <span>Divertida</span>
+                    <span>Saudável</span>
+                    <span>Radical</span>
+                </div>
+            </h1>
+            <div class="hero-button">
+                <a href="#" class="btn-1 shadow"><img src="./assets/shopping-bag-01.svg" alt="img">COMPRAR AGORA</a>
+                <a href="#" class="btn-2"><span class="shadow"><img src="./assets/play.svg" alt="img"></span>VEJA EM AÇÃO</a>
+            </div>
+        </div>
+        <div class="hero-img">
+            <div class="images">
+                <img src="./assets/Ellipse.svg" alt="img">
+                <img src="./assets/patins-image.png" alt="img">
+                <img src="./assets/Stars 1.svg" alt="img">
+                <img src="./assets/Stars 2.svg" alt="img">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
