--- a/index.html
+++ b/index.html
@@ -46,5 +46,62 @@
             </div>
         </div>
     </section>
+    <section class="banner">
+        <div class="container bg-gradient">
+            <div class="roll">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+                <img src="./assets/banner.svg" alt="img">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
