adicionando grid e script

--- a/index.html
+++ b/index.html
@@ -103,5 +103,41 @@
             </div>
         </div>
     </section>
+    <section class="galery">
+        <div class="title">
+            <p>Galeria de fotos</p>
+            <h2>#usesnitap por aí</h2>
+        </div>
+        <div class="galery-container">
+            <figure>
+                <img src="./assets/image 01.png" alt="img">
+                <figcaption>
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/image 02.png" alt="img">
+                <figcaption>
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/image 03.png" alt="img">
+                <figcaption>
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/image 04.png" alt="img">
+                <figcaption>
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+        </div>
+    </section>
+
+
+
+    <script src="main.js"></script>
 </body>
 </html>
