--- a/index.html
+++ b/index.html
@@ -135,8 +135,22 @@
             </figure>
         </div>
     </section>
-
-
+    <footer>
+        <div class="logofooter">
+            <img src="./assets/logofooter.svg" alt="img">
+        </div>
+        <nav>
+            <a href="#">Sobre</a>
+            <a href="#">Nossas lojas</a>
+            <a href="#">Política de privacidade</a>
+        </nav>
+        <div class="sci">
+            <img src="./assets/mdi_instagram.svg" alt="img">
+            <img src="./assets/ic_baseline-facebook.svg" alt="img">
+            <img src="./assets/mdi_youtube.svg" alt="img">
+            <img src="./assets/ic_baseline-tiktok.svg" alt="img">
+        </div>
+    </footer>
 
     <script src="main.js"></script>
 </body>
